--- a/mydocker/docker-compose.yml
+++ b/mydocker/docker-compose.yml
@@ -24,5 +24,7 @@ services:
         context: ../../WeddingInvitation
         dockerfile: Dockerfile
       working_dir: /app
+      volumes: 
+        - '../../WeddingInvitation:/app'
       ports: 
           - '3000:3000'  
