--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,40 @@ writable/cache/*
 !writable/cache/index.html
 
 writable/logs/*
+# Environment Files
+#-------------------------
+# These should never be under version control,
+# as it poses a security risk.
+.env
+.vagrant
+Vagrantfile
+
+#-------------------------
+# Temporary Files
+#-------------------------
+writable/cache/*
+!writable/cache/index.html
+
+writable/logs/*
+!writable/logs/index.html
+.log
+
+writable/session/*
+!writable/session/index.html
+
+writable/uploads/*
+!writable/uploads/index.html
+
+writable/debugbar/*
+!writable/debugbar/.gitkeep
+
+writable/**/*.db
+writable/**/*.sqlite
+
+php_errors.log
+
+#-------------------------
+# User Guide Temp Files
 !writable/logs/index.html
 .log
 
